# Table-Games-Test

./: README.md  basic.py  blackjack.py  test.py
.github/workflows/: test.yml
python/: LICENSE  pyproject.toml
python-hatch-2/: LICENSE.txt  README.md  pyproject.toml
python-hatch-2/tests/: basic_test.py
python/src/table_games/blackjack/: __init__.py  basic.py  blackjack.py
table-games/: README.md  pyproject.toml
table-games/src/table_games/: __about__.py  __init__.py
table-games/src/table_games/common/: cards.py
table-games/tests/: basic_test.py
