[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "table-games"
version = "0.0.1"
authors = [
  { name="David Kopala", email="kopala.david@gmail.com" },
]
description = "Generic Playing Card Library"
readme = "README.md"
license = { file="LICENSE" }
requires-python = "== 3.7.*"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
